# rpi-lcd-monitor

./: .env  Cargo.toml  Dockerfile
.github/workflows/: docker-build.yaml
src/: main.rs  types.rs
src/utils/: get_ip_address.rs  mod.rs  stats.rs
src/workers/: host_cmd.rs  mod.rs  reporter_cmd.rs
